:bug: Fix inconsistent ordering of config imports
Update `ConfigDataEnvironment` so `app.config.import`
properties defined in environment or system properties
are ordered correctly.