@@ -391,10 +391,23 @@ class ConfigDataEnvironmentContributor implements Iterable<ConfigDataEnvironment
    * @return a new {@link ConfigDataEnvironmentContributor} instance
    */
   static ConfigDataEnvironmentContributor ofInitialImport(ConfigDataLocation initialImport, ConversionService conversionService) {
-    List<ConfigDataLocation> imports = Collections.singletonList(initialImport);
-    ConfigDataProperties properties = new ConfigDataProperties(imports, null);
+    return ofInitialImports(List.of(initialImport), conversionService);
+  }
+
+  /**
+   * Factory method to create a {@link Kind#INITIAL_IMPORT initial import} contributor.
+   * This contributor is used to trigger initial imports of additional contributors. It
+   * does not contribute any properties itself.
+   *
+   * @param initialImports the initial import locations (with placeholders resolved)
+   * @param conversionService the conversion service to use
+   * @return a new {@link ConfigDataEnvironmentContributor} instance
+   */
+  static ConfigDataEnvironmentContributor ofInitialImports(List<ConfigDataLocation> initialImports, ConversionService conversionService) {
+    ConfigDataProperties properties = new ConfigDataProperties(initialImports, null);
     return new ConfigDataEnvironmentContributor(Kind.INITIAL_IMPORT, null, null,
-            false, null, null, properties, null, null, conversionService);
+            false, null, null, properties,
+            null, null, conversionService);
   }
 
   /**
